--- a/hospitalv2/seeder.html
+++ b/hospitalv2/seeder.html
@@ -1,233 +1,38 @@
-<!doctype html>
-<html lang="en" data-theme="light">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Seeder – Dr. Charan Hospital (Firestore Demo)</title>
-  <link rel="icon" href="assets/logo.png"/>
-  <link rel="stylesheet" href="styles.css"/>
 
-  <style>
-    .wrap{max-width:940px;margin:0 auto}
-    .panel{background:var(--card-bg);border-radius:16px;box-shadow:var(--shadow);border:1px solid rgba(0,0,0,.06);padding:16px}
-    .row{display:flex;gap:10px;flex-wrap:wrap;margin:10px 0}
-    .btn{background:var(--accent);color:#fff;border:none;border-radius:12px;padding:10px 14px;font-weight:700;box-shadow:var(--shadow);cursor:pointer}
-    .btn.ghost{background:transparent;color:var(--fg);border:1px solid rgba(0,0,0,.1)}
-    .btn.danger{background:#ef4444}
-    .btn:disabled{opacity:.6;cursor:not-allowed}
-    .pill{display:inline-block;padding:6px 10px;border-radius:999px;background:var(--t-blue);color:var(--c-blue);font-weight:600}
-    textarea#log{width:100%;min-height:220px;border-radius:12px;border:1px solid rgba(0,0,0,.1);padding:10px}
-  </style>
-</head>
-<body>
-  <div class="wrap">
-    <!-- Banner -->
-    <header class="banner">
-      <button id="themeToggle" class="floating-toggle" aria-label="Theme">🌙</button>
-    </header>
-
-    <section class="panel">
-      <h2 style="margin-bottom:6px">Firestore Demo Seeder</h2>
-      <div class="row" style="align-items:center">
-        <span>Today:</span>
-        <span id="today" class="pill"></span>
-      </div>
-
-      <div class="row">
-        <button id="btnSeedAll" class="btn">Seed ALL</button>
-        <button id="btnStaff" class="btn ghost">Seed Staff</button>
-        <button id="btnAtt" class="btn ghost">Seed Attendance (today)</button>
-        <button id="btnBookings" class="btn ghost">Seed Bookings (today)</button>
-        <button id="btnInvoice" class="btn ghost">Seed Sample Invoice</button>
-        <button id="btnWipe" class="btn danger">Wipe Demo Data</button>
-      </div>
-
-      <div class="row" style="align-items:center">
-        <span id="chipStatus" class="pill">Idle</span>
-        <a class="btn ghost" target="_blank" href="https://console.firebase.google.com/">Open Firebase Console</a>
-        <a class="btn ghost" href="index.html">← Back to Home</a>
-      </div>
-
-      <textarea id="log" readonly></textarea>
-    </section>
+<!doctype html><html lang="en" data-theme="light">
+<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Seeder – CSV Demo</title><link rel="stylesheet" href="styles.css"/><script src="js/csv.js"></script></head>
+<body><div class="wrap">
+<header class="banner"><a class="chip floating-toggle" href="index.html">← Back to Home</a></header>
+<section class="card">
+  <h2>CSV Seeder</h2>
+  <p class="muted">Loads sample CSVs from <code>/data</code> into local demo DB. (No cloud needed).</p>
+  <div class="row">
+    <button class="btn" id="seedAll">Seed ALL</button>
+    <button class="btn ghost" id="wipe" style="background:#ef4444;color:#fff">Wipe Demo Data</button>
   </div>
-
-  <script type="module">
-    // ========= THEME =========
-    const t=document.getElementById('themeToggle');
-    if(localStorage.theme){ document.documentElement.dataset.theme=localStorage.theme; t.textContent=localStorage.theme==='light'?'🌞':'🌙'; }
-    t.onclick=()=>{ const cur=document.documentElement.dataset.theme||'light'; const next=cur==='light'?'dark':'light'; document.documentElement.dataset.theme=next; localStorage.theme=next; t.textContent=next==='light'?'🌞':'🌙'; };
-
-    // ========= DATE LABEL =========
-    const iso = d => new Date(d).toISOString().slice(0,10);
-    document.getElementById('today').textContent = iso(new Date());
-
-    // ========= FIREBASE (CDN MODULES) =========
-    // 1) Copy your config from Firebase Console → Project settings → "Your apps" → Web app
-    const firebaseConfig = {
-      apiKey:        "PASTE_API_KEY",
-      authDomain:    "PASTE_PROJECT_ID.firebaseapp.com",
-      projectId:     "PASTE_PROJECT_ID",
-      storageBucket: "PASTE_PROJECT_ID.appspot.com",
-      messagingSenderId: "PASTE_SENDER_ID",
-      appId:         "PASTE_APP_ID"
-    };
-
-    // 2) Import SDKs
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
-    import {
-      getFirestore, collection, addDoc, setDoc, doc, getDocs, query, where, writeBatch, deleteDoc
-    } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js';
-
-    // 3) Init
-    const app = initializeApp(firebaseConfig);
-    const db  = getFirestore(app);
-
-    // ========= LOG HELPERS =========
-    const logEl   = document.getElementById('log');
-    const statusC = document.getElementById('chipStatus');
-    const log = (...args) => { logEl.value += args.join(' ') + '\n'; logEl.scrollTop = logEl.scrollHeight; };
-    const setStatus = (s) => { statusC.textContent = s; };
-
-    // ========= SEEDERS =========
-    async function seedStaff(){
-      setStatus('Seeding staff…');
-      const staff = [
-        { name:'Nurse A', role:'Nurse', phone:'9999999991', active:true, created_at:new Date() },
-        { name:'Nurse B', role:'Nurse', phone:'9999999992', active:true, created_at:new Date() },
-        { name:'Pharmacist', role:'Pharmacist', phone:'9999999993', active:true, created_at:new Date() }
-      ];
-      const batch = writeBatch(db);
-      staff.forEach(s=>{
-        const id = crypto.randomUUID();
-        batch.set(doc(db,'staff',id), {...s, id});
-      });
-      await batch.commit();
-      log('✓ Staff seeded:', staff.length);
-      setStatus('Idle');
-    }
-
-    async function seedAttendanceToday(){
-      setStatus('Seeding attendance…');
-      const today = iso(new Date());
-      // read all staff
-      const snap = await getDocs(collection(db,'staff'));
-      if (snap.empty){ log('No staff yet. Seeding staff first…'); await seedStaff(); }
-      const snap2 = await getDocs(collection(db,'staff'));
-      const batch = writeBatch(db);
-      snap2.forEach(st => {
-        const data = st.data();
-        const id = crypto.randomUUID();
-        batch.set(doc(db,'staff_attendance', id), {
-          id,
-          staff_id: data.id || st.id,
-          day: today,
-          name: data.name,
-          role: data.role,
-          status: 'On Duty',
-          note: '',
-          created_at: new Date()
-        });
-      });
-      await batch.commit();
-      log('✓ Attendance seeded for', snap2.size, 'staff on', today);
-      setStatus('Idle');
-    }
-
-    async function seedBookingsToday(){
-      setStatus('Seeding bookings…');
-      const today = iso(new Date());
-      const items = [
-        { patient:'Rahul',  phone:'9000000001', token:1, time:'09:15', status:'pending', date:today },
-        { patient:'Meena',  phone:'9000000002', token:2, time:'09:30', status:'pending', date:today },
-        { patient:'Arun',   phone:'9000000003', token:3, time:'09:45', status:'pending', date:today },
-      ];
-      const batch = writeBatch(db);
-      items.forEach(b=>{
-        const id = crypto.randomUUID();
-        batch.set(doc(db,'bookings', id), {...b, id, created_at:new Date()});
-      });
-      await batch.commit();
-      log('✓ Bookings seeded:', items.length);
-      setStatus('Idle');
-    }
-
-    async function seedInvoice(){
-      setStatus('Seeding invoice…');
-      const invoiceId = crypto.randomUUID();
-      await setDoc(doc(db,'invoices', invoiceId), {
-        id: invoiceId,
-        invoice_no: 'INV-DEMO-001',
-        invoice_date: iso(new Date()),
-        patient_name:'Demo Patient',
-        patient_phone:'9000000000',
-        doctor_name:'Dr. Charan',
-        discount_pct:0, discount_rs:0,
-        total_rs: 350.00, paid_rs:350.00, balance_rs:0,
-        created_at:new Date()
-      });
-      const items = [
-        { item_name:'Paracetamol 650mg', qty:1, price_rs:120, amount_rs:120 },
-        { item_name:'Cough Syrup 100ml', qty:1, price_rs:230, amount_rs:230 }
-      ];
-      const batch = writeBatch(db);
-      items.forEach(it=>{
-        const id = crypto.randomUUID();
-        batch.set(doc(db,'invoice_items', id), {...it, id, invoice_id: invoiceId});
-      });
-      await batch.commit();
-      log('✓ Invoice + items seeded.');
-      setStatus('Idle');
-    }
-
-    async function seedAll(){
-      try{
-        setStatus('Running…');
-        await seedStaff();
-        await seedAttendanceToday();
-        await seedBookingsToday();
-        await seedInvoice();
-        setStatus('Done');
-      }catch(err){
-        setStatus('Error');
-        log('✗ ERROR:', err.message || err);
-        alert('Seeding failed. Check the log box and your Firestore rules.');
-      }
-    }
-
-    async function wipeDemo(){
-      if(!confirm('Delete ALL demo collections (staff, staff_attendance, bookings, invoices, invoice_items)?')) return;
-      setStatus('Wiping…');
-      const cols = ['staff','staff_attendance','bookings','invoices','invoice_items'];
-      for (const c of cols){
-        const snap = await getDocs(collection(db,c));
-        const batch = writeBatch(db);
-        snap.forEach(d=> batch.delete(doc(db,c,d.id)));
-        if(!snap.empty) await batch.commit();
-        log('• Cleared', c, `(deleted ${snap.size})`);
-      }
-      setStatus('Idle');
-      log('✓ Wipe complete.');
-    }
-
-    // ========= BIND BUTTONS =========
-    document.getElementById('btnSeedAll').onclick = seedAll;
-    document.getElementById('btnStaff').onclick   = seedStaff;
-    document.getElementById('btnAtt').onclick     = seedAttendanceToday;
-    document.getElementById('btnBookings').onclick= seedBookingsToday;
-    document.getElementById('btnInvoice').onclick = seedInvoice;
-    document.getElementById('btnWipe').onclick    = wipeDemo;
-
-    // ========= QUICK SELF-TEST =========
-    try{
-      // quick write-read to prove rules/keys
-      const pingId = crypto.randomUUID();
-      await setDoc(doc(db,'_ping', pingId), {at:new Date().toISOString()});
-      log('✓ Connected to Firestore (ping ok).');
-    }catch(e){
-      log('✗ Firestore init error:', e.message || e);
-      alert('Firestore init failed. Check Firebase config in this page and Firestore Rules.');
-    }
-  </script>
-</body>
-</html>
+  <div class="row" style="margin-top:10px">
+    <a class="chip" href="data/staff.csv" download>staff.csv</a>
+    <a class="chip" href="data/staff_attendance.csv" download>staff_attendance.csv</a>
+    <a class="chip" href="data/patients.csv" download>patients.csv</a>
+    <a class="chip" href="data/bookings.csv" download>bookings.csv</a>
+    <a class="chip" href="data/invoices.csv" download>invoices.csv</a>
+    <a class="chip" href="data/invoice_items.csv" download>invoice_items.csv</a>
+  </div>
+  <div class="card" id="log" style="min-height:120px"></div>
+</section>
+</div>
+<script>
+async function seed(){
+  const files=['staff','staff_attendance','patients','bookings','invoices','invoice_items'];
+  const log=document.getElementById('log'); log.innerHTML='Seeding...';
+  for(const f of files){
+    await CsvDB.loadFromUrl(f, `data/${f}.csv`);
+    log.innerHTML += `<div>Loaded <b>${f}</b></div>`;
+  }
+  log.innerHTML += '<div><b>Done!</b> Try the app pages.</div>';
+}
+document.getElementById('seedAll').onclick=seed;
+document.getElementById('wipe').onclick=()=>{ CsvDB.clear(); document.getElementById('log').innerHTML='Cleared local demo DB.'; };
+</script>
+</body></html>
