--- a/hospitalv2/dashboard.html
+++ b/hospitalv2/dashboard.html
@@ -1,45 +1,238 @@
-
-<!doctype html><html lang="en" data-theme="light">
+<!doctype html>
+<html lang="en" data-theme="light">
 <head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Doctor Dashboard – CSV Demo</title>
-<link rel="stylesheet" href="styles.css"/>
-<script src="js/csv.js"></script>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Doctor Dashboard – CSV Demo</title>
+  <link rel="icon" href="assets/logo.png"/>
+  <link rel="stylesheet" href="styles.css?v=3"/>
+
+  <!-- Charts -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1"></script>
+
+  <style>
+    .wrap{max-width:1140px;margin:0 auto}
+    .toolbar{display:flex;gap:10px;flex-wrap:wrap;margin:10px 12px}
+    .chip{height:40px;padding:0 14px;border-radius:999px;background:var(--card-bg);
+      border:1px solid rgba(0,0,0,.06);box-shadow:var(--shadow);display:inline-flex;align-items:center}
+    .heading{display:flex;align-items:center;justify-content:space-between;margin-bottom:8px}
+    .muted{color:var(--muted)}
+    .grid-2{display:grid;gap:16px;grid-template-columns:1fr}
+    @media(min-width:900px){.grid-2{grid-template-columns:1fr 1fr}}
+    .kpi-grid{display:grid;gap:14px;grid-template-columns:repeat(auto-fill,minmax(220px,1fr))}
+    .kpi{border-radius:16px;padding:16px;box-shadow:var(--shadow);border:1px solid rgba(0,0,0,.06)}
+    .kpi h4{font-size:14px;opacity:.85;margin-bottom:6px}
+    .kpi .num{font-size:28px;font-weight:800}
+    .range{display:flex;gap:8px;flex-wrap:wrap}
+    .range .chip{background:var(--t-lilac)}
+    .range .chip.active{background:var(--accent);color:#fff;font-weight:700;box-shadow:0 6px 14px rgba(37,99,235,.25)}
+    .panel{border-radius:18px;background:var(--card-bg);padding:16px;box-shadow:var(--shadow);border:1px solid rgba(0,0,0,.06)}
+    .panel h3{margin-bottom:10px}
+    .panel--blue{background:linear-gradient(135deg,var(--t-blue),#bcdfff)}
+    .panel--lilac{background:linear-gradient(135deg,var(--t-lilac),#cab8ff)}
+    .panel--mint{background:linear-gradient(135deg,var(--t-mint),#aaf5d0)}
+    .panel--peach{background:linear-gradient(135deg,var(--t-peach),#ffb9ad)}
+    .panel--rose{background:linear-gradient(135deg,var(--t-rose),#ffb6cc)}
+    .kpi.panel--blue,.kpi.panel--lilac,.kpi.panel--mint,.kpi.panel--peach{color:#102}
+    .chart-wrap{border-radius:16px;background:var(--card-bg);padding:14px;box-shadow:var(--shadow);border:1px solid rgba(0,0,0,.06)}
+    table{width:100%;border-collapse:separate;border-spacing:0}
+    th,td{padding:12px 14px;border-bottom:1px solid rgba(0,0,0,.06)}
+    th{font-weight:700;text-align:left}
+  </style>
 </head>
 <body>
 <div class="wrap">
-  <header class="banner"><a class="chip floating-toggle" href="index.html">← Home</a></header>
+  <!-- Banner -->
+  <header class="banner">
+    <button id="themeToggle" class="chip floating-toggle" aria-label="Theme">🌙</button>
+  </header>
 
-  <section class="card">
-    <h2>Sales Analytics</h2>
-    <div class="row">
-      <div class="chip">Today: <b id="kToday">0.00</b></div>
-      <div class="chip">This Month: <b id="kMTD">0.00</b></div>
-      <div class="chip">Invoices Today: <b id="kCnt">0</b></div>
+  <!-- Actions -->
+  <nav class="toolbar">
+    <a class="chip" href="index.html">← Home</a>
+    <button id="clearCacheBtn" class="chip">Clear Cache</button>
+  </nav>
+
+  <!-- Sales -->
+  <section class="section">
+    <div class="heading">
+      <h2>Sales Analytics</h2>
+      <div class="range" id="rangeChips">
+        <button data-range="today" class="chip active">Today</button>
+        <button data-range="7d" class="chip">7D</button>
+        <button data-range="30d" class="chip">30D</button>
+        <button data-range="ytd" class="chip">YTD</button>
+      </div>
+    </div>
+
+    <div class="kpi-grid">
+      <div class="kpi panel--blue"><h4>Total (₹)</h4><div id="kTotal" class="num">0.00</div></div>
+      <div class="kpi panel--lilac"><h4>Avg / Day (₹)</h4><div id="kAvg" class="num">0.00</div></div>
+      <div class="kpi panel--mint"><h4>Invoices</h4><div id="kInv" class="num">0</div></div>
+      <div class="kpi panel--peach"><h4>Top Item</h4><div id="kTop" class="num">—</div></div>
+    </div>
+
+    <div class="grid-2" style="margin-top:12px">
+      <div class="chart-wrap">
+        <h3 class="muted">Revenue by Day</h3>
+        <canvas id="revDay"></canvas>
+      </div>
+      <div class="chart-wrap">
+        <h3 class="muted">Top Items (Share)</h3>
+        <canvas id="topItems"></canvas>
+      </div>
     </div>
   </section>
 
-  <section class="card">
-    <h2>Staff (Today) – View only</h2>
-    <table id="tbl"></table>
+  <!-- Staff Today -->
+  <section class="section">
+    <div class="heading">
+      <h2>Staff (Today) – View only</h2>
+      <span id="todayLabel" class="muted"></span>
+    </div>
+    <div class="panel">
+      <table>
+        <thead><tr><th>Name</th><th>Role</th><th>Status</th><th>Note</th></tr></thead>
+        <tbody id="staffTbody"><tr><td colspan="4" class="muted">Loading…</td></tr></tbody>
+      </table>
+    </div>
   </section>
 </div>
-<script>
-function fmt(n){return (Number(n)||0).toFixed(2);}
-function iso(d){return new Date(d).toISOString().slice(0,10);}
-(async function(){
-  const inv = CsvDB.all('invoices');
-  const day = iso(new Date());
-  const todays = inv.filter(i=> (i.invoice_date||'').slice(0,10)===day);
-  const mtd = inv.filter(i=> (i.invoice_date||'').slice(0,7)===day.slice(0,7));
-  document.getElementById('kToday').textContent=fmt(todays.reduce((s,i)=>s+Number(i.total_rs||0),0));
-  document.getElementById('kMTD').textContent=fmt(mtd.reduce((s,i)=>s+Number(i.total_rs||0),0));
-  document.getElementById('kCnt').textContent=todays.length;
 
-  const att = CsvDB.all('staff_attendance').filter(a=>a.day===day);
-  const rows = [['Name','Role','Status','Note']].concat(att.map(a=>[a.name,a.role,a.status,a.note||'']));
-  const html = rows.map((r,i)=>'<tr>'+r.map((c,j)=>`<${i? 'td':'th'}>${c}</${i? 'td':'th'}>`).join('')+'</tr>').join('');
-  document.getElementById('tbl').innerHTML=html;
-})();
+<script src="js/csv.js?v=3"></script>
+<script>
+  // ===== Theme =====
+  const tBtn = document.getElementById('themeToggle');
+  if(localStorage.theme){ document.documentElement.dataset.theme=localStorage.theme;
+    tBtn.textContent = localStorage.theme==='light'?'🌞':'🌙'; }
+  tBtn.onclick=()=>{ const cur=document.documentElement.dataset.theme||'light';
+    const next=cur==='light'?'dark':'light'; document.documentElement.dataset.theme=next;
+    localStorage.theme=next; tBtn.textContent=next==='light'?'🌞':'🌙'; };
+
+  // ===== CSV helper is in js/csv.js (must exist) =====
+  const fmt = n => (Number(n)||0).toFixed(2);
+  const toISO = d => new Date(d).toISOString().slice(0,10);
+  const todayISO = toISO(new Date());
+  document.getElementById('todayLabel').textContent = todayISO;
+
+  const parseDate = s => {
+    if(!s) return null;
+    if(/^\d{4}-\d{2}-\d{2}$/.test(s)) return new Date(s);
+    if(/^\d{2}-\d{2}-\d{4}$/.test(s)){ const [dd,mm,yy]=s.split('-').map(Number); return new Date(yy,mm-1,dd); }
+    const d = new Date(s); return isNaN(d)? null : d;
+  };
+
+  function inRange(d, which){
+    const dt = (d instanceof Date)? d : parseDate(d);
+    if(!dt) return false;
+    const end = new Date(); end.setHours(23,59,59,999);
+
+    if(which==='today') return toISO(dt)===todayISO;
+
+    if(which==='7d'){ const s = new Date(); s.setDate(s.getDate()-6); s.setHours(0,0,0,0); return dt>=s && dt<=end; }
+    if(which==='30d'){ const s = new Date(); s.setDate(s.getDate()-29); s.setHours(0,0,0,0); return dt>=s && dt<=end; }
+    if(which==='ytd'){ const s = new Date(new Date().getFullYear(),0,1); return dt>=s && dt<=end; }
+    return false;
+  }
+
+  // ===== Charts =====
+  let barChart, pieChart;
+  function makeBar(ctx, labels, values){
+    if(barChart) barChart.destroy();
+    barChart = new Chart(ctx, {
+      type:'bar',
+      data:{ labels, datasets:[{ label:'₹', data: values }]},
+      options:{ responsive:true, maintainAspectRatio:false, scales:{ y:{ beginAtZero:true } } }
+    });
+  }
+  function makePie(ctx, labels, values){
+    if(pieChart) pieChart.destroy();
+    pieChart = new Chart(ctx, {
+      type:'pie',
+      data:{ labels, datasets:[{ data: values }]},
+      options:{ responsive:true, maintainAspectRatio:false }
+    });
+  }
+
+  // ===== KPIs + Charts =====
+  async function loadKPIs(range='today'){
+    const inv   = await CSV.load('invoices');        // invoice_date,total_rs,invoice_no/id
+    const items = await CSV.load('invoice_items');   // invoice_id/invoice_no,item_name,qty,price_rs,amount_rs
+
+    // Filter invoices by range
+    const filtered = inv.filter(r => inRange(r.invoice_date, range));
+    const total = filtered.reduce((s,r)=> s + Number(r.total_rs||0), 0);
+    const days = (range==='today') ? 1 :
+                 (range==='7d') ? 7 :
+                 (range==='30d') ? 30 :
+                 Math.ceil((new Date() - new Date(new Date().getFullYear(),0,1))/86400000);
+
+    // KPIs
+    document.getElementById('kTotal').textContent = fmt(total);
+    document.getElementById('kAvg').textContent   = fmt(total/Math.max(1,days));
+    document.getElementById('kInv').textContent   = filtered.length;
+
+    // Revenue by day (group)
+    const byDay = {};
+    filtered.forEach(r=>{
+      const key = toISO(parseDate(r.invoice_date));
+      byDay[key] = (byDay[key]||0) + Number(r.total_rs||0);
+    });
+    const labelsBar = Object.keys(byDay).sort();
+    const valuesBar = labelsBar.map(k=> byDay[k]);
+
+    makeBar(document.getElementById('revDay'), labelsBar, valuesBar);
+
+    // Top items (pie) for invoices in range
+    const ids = new Set(filtered.map(r=> (r.id || r.invoice_id || r.invoice_no)));
+    const map = {};
+    (items||[]).forEach(it=>{
+      const belongs = ids.has(it.invoice_id) || ids.has(it.invoice_no);
+      if(!belongs) return;
+      const name = it.item_name || '—';
+      const amt  = Number(it.amount_rs || ((Number(it.price_rs)||0)*(Number(it.qty)||1)));
+      map[name] = (map[name]||0) + amt;
+    });
+    const sorted = Object.entries(map).sort((a,b)=>b[1]-a[1]).slice(0,8);
+    const labelsPie = sorted.map(x=>x[0]);
+    const valuesPie = sorted.map(x=>x[1]);
+    document.getElementById('kTop').textContent = labelsPie[0] || '—';
+    makePie(document.getElementById('topItems'), labelsPie, valuesPie);
+  }
+
+  // Range chips
+  const chips = Array.from(document.querySelectorAll('#rangeChips .chip'));
+  chips.forEach(c => c.addEventListener('click', ()=>{
+    chips.forEach(x=>x.classList.remove('active'));
+    c.classList.add('active');
+    loadKPIs(c.dataset.range);
+  }));
+
+  // ===== Staff Today =====
+  async function loadStaffToday(){
+    const att = await CSV.load('staff_attendance'); // day,name,role,status,note
+    const todays = (att||[]).filter(r => toISO(parseDate(r.day))===todayISO);
+    const tb = document.getElementById('staffTbody');
+    tb.innerHTML = '';
+    if(!todays.length){
+      tb.innerHTML = '<tr><td colspan="4" class="muted">No data</td></tr>';
+      return;
+    }
+    todays.forEach(r=>{
+      const tr = document.createElement('tr');
+      tr.innerHTML = `<td>${r.name||''}</td><td>${r.role||''}</td><td>${r.status||''}</td><td>${r.note||''}</td>`;
+      tb.appendChild(tr);
+    });
+  }
+
+  // Clear cache
+  document.getElementById('clearCacheBtn').onclick = ()=>{ CSV.clear(); alert('Cleared local CSV cache. Reloading…'); location.reload(); };
+
+  // Boot
+  (async function init(){
+    await loadKPIs('today');
+    await loadStaffToday();
+  })();
 </script>
-</body></html>
+</body>
+</html>
